--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -111,7 +111,7 @@ nav.sticky .menu-btn{
 .home{
   height: 100vh;
   width: 100%;
-  background: url("../images/background.png") no-repeat;
+  background: url("../img/index_bg.png") no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
